Added Granskog and story project page

--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
 
             <!-- Main Series -->
             <div class="bookStack">
-                <a href="webpages/msInfo.html" class="bookOneCover">
+                <a href="webpages/msInfo.html#bookOne" class="bookOneCover">
                     <img src="img/bookCover.png" alt="msBookOneCover">
                 </a>
 
-                <a href="#" class="bookTwoCover">
+                <a href="webpages/msInfo.html" class="bookTwoCover">
                     <img src="img/bookCover.png" alt="msBookTwoCover">
                 </a>
 
-                <a href="#" class="bookThreeCover">
+                <a href="webpages/msInfo.html" class="bookThreeCover">
                     <img src="img/bookCover.png" alt="msBookThreeCover">
                 </a>
             </div>
@@ -56,20 +56,20 @@
 
             <!-- Silent Stories -->
             <div class="bookStack ss">
-                <a href="https://www.wattpad.com/story/370999206-mindbound-silent-stories" class="bookOneCover">
+                <a href="https://www.wattpad.com/story/370999206-mindbound-silent-stories" target="_blank" rel="noopener noreferrer" class="bookOneCover">
                     <img src="img/bookCover.png" alt="ssBookOneCover">
                 </a>
 
-                <a href="#" class="bookTwoCover">
+                <a href="https://www.wattpad.com/story/370999206-mindbound-silent-stories" target="_blank" rel="noopener noreferrer" class="bookTwoCover">
                     <img src="img/bookCover.png" alt="ssBookTwoCover">
                 </a>
 
-                <a href="#" class="bookThreeCover">
+                <a href="https://www.wattpad.com/story/370999206-mindbound-silent-stories" target="_blank" rel="noopener noreferrer" class="bookThreeCover">
                     <img src="img/bookCover.png" alt="ssBookThreeCover">
                 </a>
             </div>
 
-            <a class="ssText" href="https://www.wattpad.com/story/370999206-mindbound-silent-stories">
+            <a class="ssText" href="https://www.wattpad.com/story/370999206-mindbound-silent-stories" target="_blank" rel="noopener noreferrer">
                 <p>Silent Stories</p>
             </a>
 
@@ -88,8 +88,8 @@
                 </a>
             </div>
 
-            <a class="lpText" href="https://www.wattpad.com/story/368390914-mindbound-inaugurate">
-                <p>Lost Pages(WIP)</p>
+            <a class="lpText" href="#">
+                <p>Lost Pages (WIP)</p>
             </a>
 
         </div>
@@ -97,7 +97,7 @@
         <footer>
             <div class="footerContainer">
                 <div class="footerText">
-                    <a href="https://discord.gg/Aw5rpJ3DN6">
+                    <a href="https://discord.gg/Aw5rpJ3DN6" target="_blank" rel="noopener noreferrer">
                         <img src="img/dcLogo.png" alt="discordLogo" class="dcLogo">
                     </a>
                 </div>
