--- a/nationPages/granskogPages/granskogMainpage.html
+++ b/nationPages/granskogPages/granskogMainpage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sothleigh - Mindbound</title>
+    <title>Granskog - Mindbound</title>
     <link rel="stylesheet" href="../nation.css" type="text/css">
      <link rel="icon" type="image/x-icon" href="../../img/favi.png">
 </head>
@@ -27,76 +27,87 @@
             </ul>
         </header>
 
-        <h1 class="mainTitleWhite">Mindbound</h1>
+        <h1 class="mainTitle">Mindbound</h1>
         
-        <img src="sothleighImg/sothleighHeader.png" alt="headerImage" class="headerImg">
+        <img src="granskogImg/granskogHeader.png" alt="headerImage" class="headerImg">
 
         <div class="middleBlock">
 
             <a href="javascript:history.back()" class="backButton">&lt;Back</a>
             
-            <h2 class="secondTitle">Sothleigh</h2>
+            <h2 class="secondTitle">Granskog</h2>
 
             <p class="nationText">
-              Ah Sothleigh, THE place to be when you want to get successful in your pathetic, lazy lives. 
-              Our factories accept anyone that's looking for something to do in their life, and worry not, we pay generously. 
-              As for our lovely, hard working natives, put your endless energy to use and work overtime! All our workers will become 
-              pillars holding up our incredible economy, if that's not a title worth boasting about, I don't know what is! 
-              So what are you waiting for? Come on down to Sothleigh and show us your dedication and perseverance!
+              Granskog was originally founded by travelers from Jäädytetyt Riimut. 
+              They started out as a small community that steadily grew over the years. 
+              However, hardly anyone remained on the surface, most retreating underground, 
+              building bunkers, carrying out experiments with the help of their alchemical gifts. 
+              Though most experiments end in success, one has resulted in the complete lockdown of an entire sector. 
+              Entry is strictly forbidden to anyone. 
+              No one knows for sure what is being contained, but rumors suggest a highly infectious virus.
             </p>
 
             <h2 class="thirdTitle">Cast</h2>
 
             <div class="middleBlockLowerContent">
 
-              <!-- Amphon -->
-              <a href="./castPages/amphon.html" class="castCoverOne">
-                  <img src="sothleighImg/placeholder.png" alt="amphonCover">
+              <!-- Annely -->
+              <a href="./castPages/annely.html" class="castCoverOne">
+                  <img src="granskogImg/placeholder.png" alt="annelyCover">
               </a>
 
-              <a class="castTextOne" href="./castPages/amphon.html">
-                  <p>Amphon (WIP)</p>
+              <a class="castTextOne" href="./castPages/annely.html">
+                  <p>Annely (WIP)</p>
               </a>
 
-              <!-- Joseph -->
-              <a href="./castPages/joseph.html" class="castCoverTwo">
-                  <img src="sothleighImg/placeholder.png" alt="josephCover">
+              <!-- Annina -->
+              <a href="./castPages/annina.html" class="castCoverTwo">
+                  <img src="granskogImg/placeholder.png" alt="anninaCover">
               </a>
 
-              <a class="castTextTwo" href="./castPages/joseph.html">
-                  <p>Joseph (WIP)</p>
+              <a class="castTextTwo" href="./castPages/annina.html">
+                  <p>Annina (WIP)</p>
               </a>
 
-              <!-- Mycroft -->
-              <a href="./castPages/mycroft.html" class="castCoverThree">
-                  <img src="sothleighImg/placeholder.png" alt="mycroftCover">
+              <!-- Ashley -->
+              <a href="./castPages/ashley.html" class="castCoverThree">
+                  <img src="granskogImg/placeholder.png" alt="ashleyCover">
               </a>
 
-              <a class="castTextThree" href="./castPages/mycroft.html">
-                  <p>Mycroft (WIP)</p>
+              <a class="castTextThree" href="./castPages/ashley.html">
+                  <p>Ashley (WIP)</p>
               </a>
 
-              <!-- ? -->
-              <a href="./castPages/?.html" class="castCoverFour">
-                  <img src="sothleighImg/placeholder.png" alt="?Cover">
+              <!-- Didrik -->
+              <a href="./castPages/didrik.html" class="castCoverFour">
+                  <img src="granskogImg/placeholder.png" alt="didrikCover">
               </a>
 
-              <a class="castTextFour" href="./castPages/?.html">
-                  <p>?</p>
+              <a class="castTextFour" href="./castPages/didrik.html">
+                  <p>Didrik (WIP)</p>
               </a>
             </div>
 
             <h2 class="divinityTitle">Divinity</h2>
 
-            <div class="middleBlockOneDivinity">
+            <div class="middleBlockTwoDivinity">
 
-              <!-- God of Production -->
-              <a href="./castPages/productionGod.html" class="divinityOneCover">
-                  <img src="sothleighImg/placeholder.png" alt="productionGodCover">
+              <!-- Alvatr -->
+              <a href="./castPages/alvatr.html" class="divinityOneCover">
+                  <img src="granskogImg/placeholder.png" alt="alvatrCover">
               </a>
 
-              <a class="divinityOneText" href="./castPages/productionGod.html">
-                  <p>God Of Production (WIP)</p>
+              <a class="divinityOneText" href="./castPages/alvatr.html">
+                  <p>Alvatr (WIP)</p>
+              </a>
+
+              <!-- Elixrún -->
+              <a href="./castPages/elixrun.html" class="divinityTwoCover">
+                  <img src="granskogImg/placeholder.png" alt="elixrúnCover">
+              </a>
+
+              <a class="divinityTwoText" href="./castPages/elixrun.html">
+                  <p>Elixrún (WIP)</p>
               </a>
             </div>
 
@@ -127,7 +138,7 @@
                         <img src="../../img/dcLogo.png" alt="discordLogo" class="dcLogo">
                     </a>
                 </div>
-                <img src="sothleighImg/sothleighFooter.png" alt="footerImage" class="footerImg">
+                <img src="granskogImg/granskogFooter.png" alt="footerImage" class="footerImg">
             </div>
         </footer>
     </main>
