--- a/webpages/aboutUs.html
+++ b/webpages/aboutUs.html
@@ -44,10 +44,10 @@
 
             <p>Find us on:</p>
 
-            <a class="wpLink" href="https://www.wattpad.com/user/Domen-No-Torre">Wattpad</a> <span> - </span>
-            <a class="dcLink" href="https://discord.gg/Aw5rpJ3DN6">Discord</a> <span> - </span>
-            <a class="sdLink" href="https://www.minecraftskins.com/profile/8549244/domennotorre">Skindex</a> <span> - </span>
-            <a class="igLink" href="https://www.instagram.com/domennotorre?igsh=MWF6YWVoZnZ4OXhwNg==">Instagram</a>
+            <a class="wpLink" href="https://www.wattpad.com/user/Domen-No-Torre" target="_blank" rel="noopener noreferrer">Wattpad</a> <span> - </span>
+            <a class="dcLink" href="https://discord.gg/Aw5rpJ3DN6" target="_blank" rel="noopener noreferrer">Discord</a> <span> - </span>
+            <a class="sdLink" href="https://www.minecraftskins.com/profile/8549244/domennotorre" target="_blank" rel="noopener noreferrer">Skindex</a> <span> - </span>
+            <a class="igLink" href="https://www.instagram.com/domennotorre?igsh=MWF6YWVoZnZ4OXhwNg==" target="_blank" rel="noopener noreferrer">Instagram</a>
 
             <hr style="border: 0; border-top: 0.1rem solid white; width: 80%; margin: 2rem auto;">
             </span> 
@@ -79,11 +79,11 @@
               </p>
             </div>
 
-            <a class="gooberKai" href="https://www.instagram.com/domennotorre?igsh=MWF6YWVoZnZ4OXhwNg==">
+            <a class="gooberKai" href="https://www.instagram.com/domennotorre?igsh=MWF6YWVoZnZ4OXhwNg==" target="_blank" rel="noopener noreferrer">
             <img class="gooberKai" src="../img/gooberKai.png" alt="KaiSprite">
             </a>
 
-            <a class="gooberKyara" href="https://www.instagram.com/domennotorre?igsh=MWF6YWVoZnZ4OXhwNg==">
+            <a class="gooberKyara" href="https://www.instagram.com/domennotorre?igsh=MWF6YWVoZnZ4OXhwNg==" target="_blank" rel="noopener noreferrer">
             <img class="gooberKyara" src="../img/gooberKyara.png" alt="KyaraSprite">
             </a>
 
@@ -92,7 +92,7 @@
         <footer>
             <div class="footerContainer">
                 <div class="footerText">
-                    <a href="https://discord.gg/Aw5rpJ3DN6">
+                    <a href="https://discord.gg/Aw5rpJ3DN6" target="_blank" rel="noopener noreferrer">
                         <img src="../img/dcLogo.png" alt="discordLogo" class="dcLogo">
                     </a>
                 </div>
