--- a/webpages/msInfo.html
+++ b/webpages/msInfo.html
@@ -67,7 +67,7 @@
                         </p>
                     </div>
 
-                    <p class="whereToReadOne">Read on: <a href="https://www.wattpad.com/story/368390914-mindbound-inaugurate">Wattpad</a></p>
+                    <p class="whereToReadOne">Read on: <a href="https://www.wattpad.com/story/368390914-mindbound-inaugurate" target="_blank" rel="noopener noreferrer">Wattpad</a></p>
 
                 </div>
             </div>
@@ -75,7 +75,7 @@
         <footer>
             <div class="footerContainer">
                 <div class="footerText">
-                    <a href="https://discord.gg/Aw5rpJ3DN6">
+                    <a href="https://discord.gg/Aw5rpJ3DN6" target="_blank" rel="noopener noreferrer">
                         <img src="../img/dcLogo.png" alt="discordLogo" class="dcLogo">
                     </a>
                 </div>
