--- a/webpages/projects.html
+++ b/webpages/projects.html
@@ -45,7 +45,10 @@
 
                 <hr style="border: 0; border-top: 0.1rem solid white; width: 75%; margin: 0px auto;">
 
-                <p class="updateLog">Added Cario art by @Ur_Local_Potato_Kai!</p>
+                <p class="updateLog">
+                  Added Sothleigh, Vriesland and Granskog! Also started with the story project page where you'll eventually be 
+                  able to follow our writing progress!
+                </p>
 
                 <hr style="border: 0; border-top: 0.1rem solid white; width: 75%; margin: 0px auto;">
                 
@@ -95,33 +98,31 @@
 
               <div class="projectsTextOne">
                 <!-- <a href="projects/websiteProject.html">Website</a> -->
-                <a href="https://domennotorre.github.io/index.html">Website(WIP)</a>
+                <a href="https://domennotorre.github.io/index.html">Website (WIP)</a>
               </div>
 
               <!-- Story -->
               <div class="projectsImgTwo">
-                <!-- <a href="projects/storyProject.html"> -->
-                  <a href="https://www.wattpad.com/user/Domen-No-Torre">
+                <a href="../projects/storyProject.html">
                   <img src="../img/storyProjectImg.png" alt="storyProjectImg" class="projectsImgTwo">
                 </a>
               </div>
 
               <div class="projectsTextTwo">
-                <!-- <a href="projects/storyProject.html">Story</a> -->
-                <a href="https://www.wattpad.com/user/Domen-No-Torre">Story(WIP)</a>
+                <a href="../projects/storyProject.html">Story (WIP)</a>
               </div>
 
               <!-- Skins -->
               <div class="projectsImgThree">
                 <!-- <a href="projects/skinsProject.html"> -->
-                  <a href="https://www.minecraftskins.com/profile/8549244/domennotorre">
+                  <a href="https://www.minecraftskins.com/profile/8549244/domennotorre" target="_blank" rel="noopener noreferrer">
                   <img src="../img/skinsProjectImg.png" alt="skinsProjectImg" class="projectsImgThree">
                 </a>
               </div>
 
               <div class="projectsTextThree">
                 <!-- <a href="projects/skinsProject.html">Skins</a> -->
-                <a href="https://www.minecraftskins.com/profile/8549244/domennotorre">Skins</a>
+                <a href="https://www.minecraftskins.com/profile/8549244/domennotorre" target="_blank" rel="noopener noreferrer">Skins</a>
               </div>
 
               <!-- Game -->
@@ -132,7 +133,7 @@
               </div>
 
               <div class="projectsTextFour">
-                <a href="projects/gameProject.html">Game(WIP)</a>
+                <a href="projects/gameProject.html">Game (WIP)</a>
               </div>
           </div>
         </div>
@@ -140,7 +141,7 @@
         <footer>
             <div class="footerContainer">
                 <div class="footerText">
-                    <a href="https://discord.gg/Aw5rpJ3DN6">
+                    <a href="https://discord.gg/Aw5rpJ3DN6" target="_blank" rel="noopener noreferrer">
                         <img src="../img/dcLogo.png" alt="discordLogo" class="dcLogo">
                     </a>
                 </div>
