Added new characters

--- a/nationPages/riimutPages/riimutMainpage.html
+++ b/nationPages/riimutPages/riimutMainpage.html
@@ -37,7 +37,8 @@
             
             <h2 class="secondTitleRiimut">Jäädytetyt Riimut</h2>
 
-            <p class="nationText">Lowkey kinda dead.
+            <p class="nationText">
+              (WIP)
             </p>
 
             <h2 class="thirdTitle">Cast</h2>
@@ -85,22 +86,22 @@
 
             <div class="middleBlockTwoDivinity">
 
-              <!-- God of snow -->
-              <a href="./castPages/snowGod.html" class="divinityOneCover">
-                  <img src="riimutImg/placeholder.png" alt="snowGodCover">
+              <!-- Mjǫllwyn -->
+              <a href="./castPages/mjollwyn.html" class="divinityOneCover">
+                  <img src="riimutImg/placeholder.png" alt="mjollwynCover">
               </a>
 
-              <a class="divinityOneText" href="./castPages/snowGod.html">
-                  <p>God of snow (WIP)</p>
+              <a class="divinityOneText" href="./castPages/mjollwyn.html">
+                  <p>Mjǫllwyn (WIP)</p>
               </a>
 
-              <!-- God of rune -->
-              <a href="./castPages/runeGod.html" class="divinityTwoCover">
-                  <img src="riimutImg/placeholder.png" alt="runeGodCover">
+              <!-- Galdrúnir -->
+              <a href="./castPages/galdrunir.html" class="divinityTwoCover">
+                  <img src="riimutImg/placeholder.png" alt="galdrunirCover">
               </a>
 
-              <a class="divinityTwoText" href="./castPages/runeGod.html">
-                  <p>God of runes (WIP)</p>
+              <a class="divinityTwoText" href="./castPages/galdrunir.html">
+                  <p>Galdrúnir (WIP)</p>
               </a>
 
             </div>
@@ -108,19 +109,15 @@
              <h2 class="mentionsTitle">Honorable Mentions</h2>
 
              <div class="mentions">
-                <p class="mention">To</p>
-                <p class="mention">be</p>
-                <p class="mention">added</p>
-
-                <!-- <div class="mention">To Be Added
+                <div class="mention">Ásgeir
                     <div class="mentionInfo">
-                        <h4>To Be Added</h4>
+                        <h4>Ásgeir</h4>
                         
                         <hr style="border: 0; border-top: 0.1rem solid white; width: 80%; margin: 0rem auto;">
 
                         <p>(WIP)</p>
                     </div>
-                </div>  -->
+                </div> 
              </div>
 
         </div>
