--- a/nationPages/sothleighPages/sothleighMainpage.html
+++ b/nationPages/sothleighPages/sothleighMainpage.html
@@ -55,48 +55,48 @@
               </a>
 
               <a class="castTextOne" href="./castPages/amphon.html">
-                  <p>Amphon (WIP)</p>
+                  <p>Amphon</p>
               </a>
 
-              <!-- Joseph -->
-              <a href="./castPages/joseph.html" class="castCoverTwo">
-                  <img src="sothleighImg/placeholder.png" alt="josephCover">
-              </a>
-
-              <a class="castTextTwo" href="./castPages/joseph.html">
-                  <p>Joseph (WIP)</p>
-              </a>
-
-              <!-- Mycroft -->
-              <a href="./castPages/mycroft.html" class="castCoverThree">
-                  <img src="sothleighImg/placeholder.png" alt="mycroftCover">
-              </a>
-
-              <a class="castTextThree" href="./castPages/mycroft.html">
-                  <p>Mycroft (WIP)</p>
-              </a>
-
-              <!-- ? -->
-              <a href="./castPages/?.html" class="castCoverFour">
+              <!-- Graham -->
+              <a href="./castPages/?.html" class="castCoverTwo">
                   <img src="sothleighImg/placeholder.png" alt="?Cover">
               </a>
 
-              <a class="castTextFour" href="./castPages/?.html">
-                  <p>?</p>
+              <a class="castTextTwo" href="./castPages/?.html">
+                  <p>Graham (WIP)</p>
               </a>
+
+              <!-- Joseph -->
+              <a href="./castPages/joseph.html" class="castCoverThree">
+                  <img src="sothleighImg/placeholder.png" alt="josephCover">
+              </a>
+
+              <a class="castTextThree" href="./castPages/joseph.html">
+                  <p>Joseph</p>
+              </a>
+
+              <!-- Mycroft -->
+              <a href="./castPages/mycroft.html" class="castCoverFour">
+                  <img src="sothleighImg/placeholder.png" alt="mycroftCover">
+              </a>
+
+              <a class="castTextFour" href="./castPages/mycroft.html">
+                  <p>Mycroft (WIP)</p>
+              </a>              
             </div>
 
             <h2 class="divinityTitle">Divinity</h2>
 
             <div class="middleBlockOneDivinity">
 
-              <!-- God of Production -->
-              <a href="./castPages/productionGod.html" class="divinityOneCover">
-                  <img src="sothleighImg/placeholder.png" alt="productionGodCover">
+              <!-- Ealdwyrhta -->
+              <a href="./castPages/ealdwyrhta.html" class="divinityOneCover">
+                  <img src="sothleighImg/placeholder.png" alt="ealdwyrhtaCover">
               </a>
 
-              <a class="divinityOneText" href="./castPages/productionGod.html">
-                  <p>God Of Production (WIP)</p>
+              <a class="divinityOneText" href="./castPages/ealdwyrhta.html">
+                  <p>Ealdwyrhta (WIP)</p>
               </a>
             </div>
 
