--- a/nationPages/zloyvorPages/zloyvorMainpage.html
+++ b/nationPages/zloyvorPages/zloyvorMainpage.html
@@ -59,31 +59,31 @@
                   <p>Anastasia</p>
               </a>
 
+              <!-- Daniel -->
+              <a href="./castPages/daniel.html" class="castCoverTwo">
+                  <img src="zloyvorImg/placeholder.png" alt="danielCover">
+              </a>
+
+              <a class="castTextTwo" href="./castPages/daniel.html">
+                  <p>Daniel (WIP)</p>
+              </a>
+
               <!-- Irina -->
-              <a href="./castPages/irina.html" class="castCoverTwo">
+              <a href="./castPages/irina.html" class="castCoverThree">
                   <img src="zloyvorImg/placeholder.png" alt="irinaCover">
               </a>
 
-              <a class="castTextTwo" href="./castPages/irina.html">
+              <a class="castTextThree" href="./castPages/irina.html">
                   <p>Irina (WIP)</p>
               </a>
 
               <!-- Mnemos -->
-              <a href="./castPages/mnemos.html" class="castCoverThree">
+              <a href="./castPages/mnemos.html" class="castCoverFour">
                   <img src="zloyvorImg/placeholder.png" alt="mnemosCover">
               </a>
 
-              <a class="castTextThree" href="./castPages/mnemos.html">
+              <a class="castTextFour" href="./castPages/mnemos.html">
                   <p>Mnemos</p>
-              </a>
-
-              <!-- Ruka -->
-              <a href="./castPages/ruka.html" class="castCoverFour">
-                  <img src="zloyvorImg/placeholder.png" alt="rukaCover">
-              </a>
-
-              <a class="castTextFour" href="./castPages/ruka.html">
-                  <p>Ruka (WIP)</p>
               </a>
           </div>
 
@@ -113,19 +113,15 @@
              <h2 class="mentionsTitle">Honorable Mentions</h2>
 
              <div class="mentions">
-                <p class="mention">To</p>
-                <p class="mention">be</p>
-                <p class="mention">added</p>
-
-                <!-- <div class="mention">To Be Added
+                <div class="mention">The Ruka
                     <div class="mentionInfo">
-                        <h4>To Be Added</h4>
+                        <h4>The Ruka</h4>
                         
                         <hr style="border: 0; border-top: 0.1rem solid white; width: 80%; margin: 0rem auto;">
 
                         <p>(WIP)</p>
                     </div>
-                </div>  -->
+                </div> 
              </div>
 
         </div>
