--- a/webpages/projects.html
+++ b/webpages/projects.html
@@ -46,7 +46,7 @@
                 <hr style="border: 0; border-top: 0.1rem solid white; width: 75%; margin: 0px auto;">
 
                 <p class="updateLog">
-                  Added Sothleigh, Vriesland and Granskog! Also started with the story project page where you'll eventually be 
+                  Added New characters! Also started with the story project page where you'll eventually be 
                   able to follow our writing progress!
                 </p>
 
