--- a/nationPages/riimutPages/castPages/ase.html
+++ b/nationPages/riimutPages/castPages/ase.html
@@ -63,7 +63,7 @@
                   <div>
                     <p><b>Orientation:</b> Pansexual</p>
                     <p><b>Occupation:</b> Soldier</p>
-                    <p><b>Residence:</b> Riimut village</p>
+                    <p><b>Residence:</b> Issøens by</p>
                     <p><b>Relationship status:</b> Unknown</p>
                   </div>
                 </div>
