--- a/nationPages/zloyvorPages/castPages/anastasia.html
+++ b/nationPages/zloyvorPages/castPages/anastasia.html
@@ -63,7 +63,7 @@
                   <div>
                     <p><b>Orientation:</b> Lesbiflexible</p>
                     <p><b>Occupation:</b> Hunter</p>
-                    <p><b>Residence:</b> Old Church</p>
+                    <p><b>Residence:</b> Old Church, Zashchita</p>
                     <p><b>Relationship status:</b> Unknown</p>
                   </div>
                 </div>
