--- a/nationPages/nations.html
+++ b/nationPages/nations.html
@@ -58,7 +58,7 @@
 
             <ul class="nationListRight">
                 <li><a class="midprot" href="./midprotPages/midprotMainpage.html">Midprot(WIP)</a></li>
-                <li><a class="nesgen" href="./nesgenPages/nesgenMainpage.html">Nesgen(WIP)</a></li>
+                <li><a class="nesgen" href="./nesgenPages/nesgenMainpage.html">Nesgen</a></li>
                 <li><a class="kokka" href="./kokkaPages/kokkaMainpage.html">Shokuminchi Kokka(WIP)</a></li>
                 <li><a class="sothleigh" href="./sothleighPages/sothleighMainpage.html">Sothleigh</a></li>
                 <li><a class="terpayatre" href="./terpayatrePages/terpayatreMainpage.html">Terpayâtre(WIP)</a></li>
