--- a/nationPages/nesgenPages/nesgenMainpage.html
+++ b/nationPages/nesgenPages/nesgenMainpage.html
@@ -96,36 +96,18 @@
               </a>
             </div>
 
-            <h2 class="divinityTitle">Divinity</h2>
-
-            <div class="middleBlockOneDivinity">
-
-              <!-- HGod -->
-              <a href="./castPages/lgod.html" class="divinityOneCover">
-                  <img src="nesgenImg/placeholder.png" alt="lgodCover">
-              </a>
-
-              <a class="divinityOneText" href="./castPages/lgod.html">
-                  <p>HGod (WIP)</p>
-              </a>
-            </div>
-
              <h2 class="mentionsTitle">Honorable Mentions</h2>
 
              <div class="mentions">
-                <p class="mention">To</p>
-                <p class="mention">be</p>
-                <p class="mention">added</p>
-
-                <!-- <div class="mention">To Be Added
+                <div class="mention">Antony
                     <div class="mentionInfo">
-                        <h4>To Be Added</h4>
+                        <h4>Antony Lucido</h4>
                         
                         <hr style="border: 0; border-top: 0.1rem solid white; width: 80%; margin: 0rem auto;">
 
                         <p>(WIP)</p>
                     </div>
-                </div>  -->
+                </div> 
              </div>
 
         </div>
