Added redacted text to css

--- a/webpages/allCharacters.html
+++ b/webpages/allCharacters.html
@@ -563,10 +563,10 @@
                 data-role="side"
                 data-book="silent">
 
-                Eliza Dahl
+                <span class="redactedText">Eliza Dahl</span>
 
                 <div class="characterInfo">
-                  <h4>Eliza Dahl</h4>
+                  <h4><span class="redactedText">Eliza Dahl</span></h4>
                     
                     <hr style="border: 0; border-top: 0.1rem solid white; width: 80%; margin: 0rem auto;">
 
@@ -1083,10 +1083,10 @@
                 data-role="side"
                 data-book="silent">
 
-                Osvaldo Lucido
+                <span class="redactedText">Osvaldo Lucido</span>
 
                 <div class="characterInfo">
-                  <h4>Osvaldo Lucido</h4>
+                  <h4><span class="redactedText">Osvaldo Lucido</span></h4>
                     
                     <hr style="border: 0; border-top: 0.1rem solid white; width: 80%; margin: 0rem auto;">
 
