--- a/nationPages/riimutPages/castPages/ase.html
+++ b/nationPages/riimutPages/castPages/ase.html
@@ -61,10 +61,10 @@
                   </div>
 
                   <div>
-                    <p><b>Orientation:</b> Pansexual</p>
+                    <p><b>Personality:</b> Determined</p>
                     <p><b>Occupation:</b> Soldier</p>
                     <p><b>Residence:</b> Issøens by</p>
-                    <p><b>Relationship status:</b> Unknown</p>
+                    <p><b>Love life:</b> Pansexual/Unknown</p>
                   </div>
                 </div>
 
@@ -92,7 +92,12 @@
 
           <a href="javascript:history.back()" class="backButton">&lt;Back</a>
 
-          <img src="../riimutImg/castFooterPlaceholder.png" alt="footerCastImage" class="footerCastImg">
+          <h2 class="thirdTitle">Art Collection</h2>
+
+          <div class="artDisplay">
+            <img src="../riimutImg/bigAse.png" class="artOne" alt="aseHeadShot">
+            <p class="creditOne">@Tea4Silver</p>
+          </div>
 
         </div>
 
@@ -107,6 +112,11 @@
             </div>
         </footer>
     </main>
+
+<div id="lightbox" class="lightbox">
+  <span class="close">X</span>
+  <img class="lightbox-content" id="lightbox-img">
+</div>
 
 <script src="../../../functions/searchMap.js"></script>
 
@@ -232,6 +242,32 @@ nextBtn.addEventListener('click', () =>
   current = (current + 1) % slides.length;
   showSlide(current);
 });
+
+// ====================
+// Art view
+// ====================
+
+const lightbox = document.getElementById("lightbox");
+  const lightboxImg = document.getElementById("lightbox-img");
+  const images = document.querySelectorAll(".artDisplay img");
+  const closeBtn = document.querySelector(".close");
+
+  images.forEach(img => {
+    img.addEventListener("click", () => {
+      lightbox.style.display = "flex";
+      lightboxImg.src = img.src;
+    });
+  });
+
+  closeBtn.addEventListener("click", () => {
+    lightbox.style.display = "none";
+  });
+
+  lightbox.addEventListener("click", (e) => {
+    if (e.target === lightbox) {
+      lightbox.style.display = "none";
+    }
+  });
 </script>
 </body>
 </html>
