Adjusted slider font-size

--- a/nationPages/altipianiPages/castPages/reve.html
+++ b/nationPages/altipianiPages/castPages/reve.html
@@ -64,7 +64,7 @@
                     <p><b>Personality:</b> Chaotic</p>
                     <p><b>Occupation:</b> Advisor</p>
                     <p><b>Residence:</b> Peaselio, Imporiuno</p>
-                    <p><b>Love life:</b> Homosexual/Taken</p>
+                    <p><b>Love life:</b> Homosexual/Unknown</p>
                   </div>
                 </div>
 
