Added Altanawue and new lore

--- a/nationPages/altanawuePages/castPages/isaac.html
+++ b/nationPages/altanawuePages/castPages/isaac.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anastasia - Mindbound</title>
+    <title>Isaac - Mindbound</title>
     <link rel="stylesheet" href="../../cast.css" type="text/css">
      <link rel="icon" type="image/x-icon" href="../../../img/favi.png">
 </head>
@@ -29,13 +29,13 @@
 
         <h1 class="mainTitleWhite">Mindbound</h1>
         
-        <img src="../zloyvorImg/zloyvorHeader.png" alt="headerImage" class="headerImg">
+        <img src="../altanawueImg/altanawueHeader.png" alt="headerImage" class="headerImg">
 
         <div class="middleBlock">
 
-          <img src="../zloyvorImg/bigAna.png" alt="castImage" class="sideCastImg">
+          <img src="../altanawueImg/castPlaceholder.png" alt="castImage" class="sideCastImg">
             
-          <h2 class="secondTitle">Anastasia</h2>
+          <h2 class="secondTitle">Isaac</h2>
 
           <div class="infoSlider">
 
@@ -47,24 +47,24 @@
               <div class="slides">
 
                 <div class="slide active">
-                  <p class="creditText">Headshot by: @Tea4Silver</p>
+                  <p class="creditText">Headshot by: WIP</p>
                   <p class="creditText">Full body by: WIP</p>
                   <a href="#artDisplay" class="creditText">v See more v</a>
                 </div>
 
                 <div class="slide extraInfo">
                   <div>
-                    <p><b>Age:</b> 31</p>
-                    <p><b>Gender:</b> Female</p>
+                    <p><b>Age:</b> 24</p>
+                    <p><b>Gender:</b> Male</p>
                     <p><b>Species:</b> Human</p>
-                    <p><b>Birthday:</b> Unknown</p>
+                    <p><b>Birthday:</b> February 28th</p>
                   </div>
 
                   <div>
-                    <p><b>Personality:</b> Outgoing</p>
-                    <p><b>Occupation:</b> Hunter</p>
-                    <p><b>Residence:</b> Old Church, Zashchita</p>
-                    <p><b>Love life:</b> Lesbiflexible/Unknown</p>
+                    <p><b>Personality:</b> Joyful</p>
+                    <p><b>Occupation:</b> Entertainer</p>
+                    <p><b>Residence:</b> Near the capital</p>
+                    <p><b>Love life:</b> Pansexual/Single</p>
                   </div>
                 </div>
 
@@ -73,8 +73,12 @@
                   <hr class="playlistHr">
                   <div class="scrollWrapper">
                     <ul class="scrollable">
-                      <li><a href="https://www.youtube.com/watch?v=GuieSzdFY2U&list=PLMu_VPFtEvET2GC3RyKx5gxD4ng4B0YaW" target="_blank" rel="noopener noreferrer">Bloodborne OST - Ryan Amon</a></li>
-                    </ul>
+                      <li><a href="https://www.youtube.com/watch?v=T9GmO_WFhjQ" target="_blank" rel="noopener noreferrer">Arabian nights - Will Smith</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=g4UGCaLg2SY" target="_blank" rel="noopener noreferrer">Laplace's angel - Will Wood</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=hHUbLv4ThOo" target="_blank" rel="noopener noreferrer">Timber - Pitbull</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=VCLxJd1d84s" target="_blank" rel="noopener noreferrer">Buttons - The Pussycat Dolls</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=BEHX72PKmkk" target="_blank" rel="noopener noreferrer">Prince Ali - Will Smith</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=Q0ukS1ceZa0" target="_blank" rel="noopener noreferrer">One jump ahead - Mena Massoud</a></li>
                   </div>
                 </div>
 
@@ -87,7 +91,8 @@
 
           </div>
 
-          <p class="castText">(WIP)
+          <p class="castText">
+            (WIP)
           </p>
 
           <a href="javascript:history.back()" class="backButton">&lt;Back</a>
@@ -95,8 +100,8 @@
           <h2 class="thirdTitle">Art Collection</h2>
 
           <div id="artDisplay">
-            <img src="../zloyvorImg/bigAna.png" class="artOne" alt="anastasiaHeadShot">
-            <p class="creditOne">@Tea4Silver</p>
+            <!-- <img src="../sothleighImg/.png" class="artOne" alt=""> -->
+            <p class="creditOne">Nothing to see here yet</p>
           </div>
 
         </div>
@@ -108,7 +113,7 @@
                         <img src="../../../img/dcLogo.png" alt="discordLogo" class="dcLogo">
                     </a>
                 </div>
-                <img src="../zloyvorImg/zloyvorFooter.png" alt="footerImage" class="footerImg">
+                <img src="../altanawueImg/altanawueFooter.png" alt="footerImage" class="footerImg">
             </div>
         </footer>
     </main>
