--- a/nationPages/altipianiPages/castPages/cario.html
+++ b/nationPages/altipianiPages/castPages/cario.html
@@ -49,7 +49,7 @@
                 <div class="slide active">
                   <p class="creditText">Headshot by: @Ur_Local_Potato_Kai</p>
                   <p class="creditText">Full body by: WIP</p>
-                  <p class="creditText">Reference sheet by: WIP</p>
+                  <a href="#artDisplay" class="creditText">v See more v</a>
                 </div>
 
                 <div class="slide extraInfo">
@@ -101,7 +101,7 @@
 
           <h2 class="thirdTitle">Art Collection</h2>
 
-          <div class="artDisplay">
+          <div id="artDisplay">
             <img src="../altipianiImg/bigCario.png" class="artOne" alt="carioHeadShot">
             <p class="creditOne">@Ur_Local_Potato_Kai</p>
           </div>
