--- a/nationPages/nations.html
+++ b/nationPages/nations.html
@@ -47,7 +47,7 @@
 
             <ul class="nationListLeft">
                 <li><a class="altipiani" href="./altipianiPages/altipianiMainpage.html">Altipiani</a></li>
-                <li><a class="altanawue" href="./altanawuePages/altanawueMainpage.html">'Ard Altanawue(WIP)</a></li>
+                <li><a class="altanawue" href="./altanawuePages/altanawueMainpage.html">'Ard Altanawue</a></li>
                 <li><a class="celerracion" href="./celerracionPages/celerracionMainpage.html">Celerración(WIP)</a></li>
                 <li><a class="chuma" href="./chumaPages/chumaMainpage.html">Chuma Baidisha(WIP)</a></li>
                 <li><a class="farostia" href="./farostiaPages/farostiaMainpage.html">Farostia(WIP)</a></li>
