--- a/nationPages/altipianiPages/altipianiMainpage.html
+++ b/nationPages/altipianiPages/altipianiMainpage.html
@@ -154,7 +154,10 @@
                         
                         <hr style="border: 0; border-top: 0.1rem solid white; width: 80%; margin: 0rem auto;">
 
-                        <p>(WIP)</p>
+                        <p>Nicolas' father and chief of police at the Peaselio police department. Even after years of service, 
+                           not once has the thought of retiring crossed his mind, loving his job too much to let it go forever.
+                        </p>
+                        
                     </div>
                 </div> 
 
