--- a/nationPages/altipianiPages/castPages/cosmo.html
+++ b/nationPages/altipianiPages/castPages/cosmo.html
@@ -49,7 +49,7 @@
                 <div class="slide active">
                   <p class="creditText">Headshot by: WIP</p>
                   <p class="creditText">Full body by: WIP</p>
-                  <p class="creditText">Reference sheet by: WIP</p>
+                  <a href="#artDisplay" class="creditText">v See more v</a>
                 </div>
 
                 <div class="slide extraInfo">
@@ -103,7 +103,7 @@
 
           <h2 class="thirdTitle">Art Collection</h2>
 
-          <div class="artDisplay">
+          <div id="artDisplay">
             <!-- <img src="../altipianiImg/.png" class="artOne" alt=""> -->
             <p class="creditOne">Nothing to see here yet</p>
           </div>
