Fixed clickable art not enlarging

--- a/nationPages/altipianiPages/castPages/cario.html
+++ b/nationPages/altipianiPages/castPages/cario.html
@@ -256,7 +256,7 @@ nextBtn.addEventListener('click', () =>
 
 const lightbox = document.getElementById("lightbox");
   const lightboxImg = document.getElementById("lightbox-img");
-  const images = document.querySelectorAll(".artDisplay img");
+  const images = document.querySelectorAll("#artDisplay img");
   const closeBtn = document.querySelector(".close");
 
   images.forEach(img => {
