--- a/webpages/allCharacters.html
+++ b/webpages/allCharacters.html
@@ -164,7 +164,7 @@
                   <hr style="border: 0; border-top: 0.1rem solid white; width: 80%; margin: 0rem auto;">
 
                   <p>
-                    Nicolas' father and chief of police at the Peaselio police department. Even after years of service, 
+                    Nicolas and Sylvia's father and chief of police at the Peaselio police department. Even after years of service, 
                     not once has the thought of retiring crossed his mind, loving his job too much to let it go forever.
                   </p>
 
@@ -392,7 +392,7 @@
                     <hr style="border: 0; border-top: 0.1rem solid white; width: 80%; margin: 0rem auto;">
 
                     <p>
-                      A nurse at the Fortuna hospital in Ciosaro and Nicolas' mother. Even though her kids are already 
+                      A nurse at the Fortuna hospital in Ciosaro and Nicolas and Sylvia's mother. Even though her kids are already 
                       adults as well, she still insists on caring for them, inviting them over for dinner or showing up 
                       at their homes with meals.</p>
                 </div>
@@ -1254,6 +1254,27 @@
                     <hr style="border: 0; border-top: 0.1rem solid white; width: 80%; margin: 0rem auto;">
 
                     <p>(WIP)</p>
+                </div>
+              </div>
+
+              <div class="character"
+                data-name="Sylvia Raffaelli"
+                data-nation="Altipiani"
+                data-role="side"
+                data-book="main,silent">
+
+                Sylvia Raffaelli
+
+                <div class="characterInfo">
+                  <h4>Sylvia Raffaelli</h4>
+                    
+                    <hr style="border: 0; border-top: 0.1rem solid white; width: 80%; margin: 0rem auto;">
+
+                    <p>
+                      Scout in the Altipiani Ground Forces and Nicolas' older sister. Even though she loves being with her family, 
+                      she's barely home most of the time, usually out on expeditions across Eperilet or training in Sercioto. 
+                      She's currently assigned to investigate the tower with her troop.
+                    </p>
                 </div>
               </div>
 
